Fixing tabs alignments

--- a/style/about.css
+++ b/style/about.css
@@ -368,7 +368,8 @@ body {
     .containers_wrapper {
         flex-direction: column; 
         margin-top: 60%;
-        height: auto;
+        height: 100%;
+        width: 100%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -382,8 +383,8 @@ body {
 /*  *********************** Soft Skills Container*********************** */
 .softSkillsCourses_container {
     background-color: black;
-    width: 30%;
-    height: 200px;
+    width: 100%;
+    height: 220px;
     box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
     transition: box-shadow 0.3s, transform 0.3s;
     display: flex; 
